# nrf52-sensors

./: README.md  WM_Read_Uno_new.ino  eac,testpin.yaml
adc/: CMakeLists.txt  prj.conf
adc/src/: main.c
arduino_unoR3/: WM_Read_Uno_new.ino
nRFIrrometer/: CMakeLists.txt  prj.conf
nRFIrrometer/src/: main.c
nRFIrrometer/src/BLE/: BleHandler.c  BleHandler.h  BleService.c  BleService.h
nRFPressureSensorCode/: CMakeLists.txt  prj.conf
nRFPressureSensorCode/boards/: nrf52840dk_nrf52840.overlay
nRFPressureSensorCode/src/: main.c
nRFPressureSensorCode/src/BLE/: BleHandler.c  BleHandler.h  BleService.c
nRFPressureSensorCode/src/Json/: JsonHandler.h  Jsonhandler.c
nRFPressureSensorCode/src/RTC/: RtcHandler.c  RtcHandler.h
nRFPressureSensorCodewithMeshSupport/: CMakeLists.txt  prj.conf
nRFPressureSensorCodewithMeshSupport/boards/: nrf52840dk_nrf52840.overlay
nRFPressureSensorCodewithMeshSupport/boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840.dsp
nRFPressureSensorCodewithMeshSupport/src/: main.c
nRFPressureSensorCodewithMeshSupport/src/BLE/: BleHandler.h  BleService.h
nRFPressureSensorCodewithMeshSupport/src/Json/: Jsonhandler.c
nRFPressureSensorCodewithMeshSupport/src/MESH/: mesh_handler.c  mesh_handler.h  mesh_sub_sys.c  mesh_sub_sys.h
nrf52832dk_segger/: WM_nrf82532dk.c  sdk_config.h
nrf52840dk_nrfconnect/: CMakeLists.txt
nrf82540dk_configurations/: eac,testpin.yaml  nrf52840dk_nrf52840.dts
sensor_server/: CMakeLists.txt  prj.conf
sensor_server/include/: model_handler.h
sensor_server/src/: main.c  model_handler.c
